# cec-detect

./: .coveragerc  .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  README.md  README.rst  setup.cfg  setup.py
docs/: conf.py  index.rst
src/cec_detect/: .gitignore  __init__.py  detect.py  skeleton.py
tests/: conftest.py  test_skeleton.py
